-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11.0.21
-
Component/s: hotspot
-
b01
Create on behalf of tjw378335@alibaba-inc.com
-----
Stack: 0x000075760880000000007E57609800001 sp=0x00007576097e750, freespace=1017k
Native frames: (J=compiled Java code j=interpreted VV-VM code C=native code)
V [libjvm.so+0x69c36f] java_lang_Thread::thread_id(oopDesc* )+0xf
V [libjvm.so+0x6e6f15] JfrCheckpointThreadClosure::do_thread(Thread* )+0x2f5
V [1ibjvm.so+0xaa095c] Threads::threads_do(Threadclosure*)+0x2c
V [libjvm.so+0x6e6b67] JfrThreadConstantSet::serialize(JfrCheckpointwriter& )+0x87
V [libjvm.so+0x6ea6d2] JfrTypeManager::writes_afepoint_types(JfrCheckpointwriter& )+0x92
V [libjvm.so+0x6a70ba] JfrCheckpointManager::write_safepoint_types()+0x3a
V [libjvm.so+0x6d01be] JfrRecorderService::safepoint_write()+0x39e
V [libjvm.so+0xb06097] VM Operation::evaluate()+0x47
V [libjvm.so+0xb0402d] VMThread:evaluate_operation(VM_Operation* )+0xfd
V [libjvm.so+0xb04479] VMThread::loop()+0x219
V [libjvm.so+0xb04926] VMThread::run()+0x86
V [libjvm.so+0x9375b2] java_start(Thread*)+0xf2
More details from gdb:
-----
#0 0x00007fccdd97a605 in raise () from /lib64/libc.so.6
#1 0x00007fccdd9638a2 in abort () from /lib64/libc.so.6
#2 0x00007fccdc769975 in os::abort (dump_core=<optimized out>, siginfo=<optimized out>, context=<optimized out>) at ./src/hotspot/os/linux/os_linux.cpp:1565
#3 0x00007fccdca29919 in VMError::report_and_die (id=<optimized out>, message=message@entry=0x0, detail_fmt=detail_fmt@entry=0x7fccdcb03990 "%s", detail_args=detail_args@entry=0x7fc229bfd668, thread=thread@entry=0x7fccdb6c8680, pc=pc@entry 0x7fccdc3d282f <java_lang_Thread::thread_id(oopDesc*)+15> "H\213\004\a]\303\017\037", siginfo=siginfo@entry=0x7fc229bfda30, context=context@entry=0x7fc229bfd900, filename=filename@entry=0x0, lineno=lineno@entry=0, size=size@entry=0) at ./src/hotspot/share/utilities/vmError.cpp:1609
#4 0x00007fccdca2a331 in VMError::report_and die (thread=thread@entry=0x7fccdb6c8680, sig=sig@entry=11, pc=pc@entry=0x7fccdc3d282f <java_lang_Thread: :thread_id(oopDesc*)+15> "H\213\004\a]\303\017\037", siginfo=siginfo@entry=0x7fc229bfda30)
#5 0x00007fccdca2a361 in VMError::report_and_die (thread=thread@entry=0x7fccdb6c8680, sig=sig@entry=11, pc=pc@entry=0x7fccdc3d282f <java_lang_Thread::thread_id(oopDesc*)+15> "H\213\004\a]\303\017\037", siginfo=siginfo@entry=0x7fc229bfda30, context=context@entry=0x7fc229bfd900)at ./src/hotspot/share/utilities/vmError.cpp:1276
#6 0x00007fccdc774c19 in JVM_handle_linux_signal (sig=11, info=0x7fc229bfda30, ucVoid=0x7fc229bfd900, abort_if_unrecognized=<optimized out>) at ./src/hotspot/os_cpu/linux_x86/os_linux_x86.cpp:626
#7 0x00007fccdc767478 in signalHandler (sig=11, info=0x7fc229bfda30, uc=0x7fc229bfd900)at./src/hotspot/os/linux/os_linux.cpp:4866
#8 <signal handler called>
#9 RawAccessBarrier<64ul>::load_internal<64ul, long> (addr=0x28) at ./src/hotspot/share/oops/accessBackend.hpp:260
#10 RawAccessBarrier<64ul>: :load<long> (addr=0x28)at ./src/hotspot/share/oops/accessBackend.hpp:343
#11 AccessInternal::PreRuntimeDispatch::load<544848ul, long> (addr=0x28) at ./src/hotspot/share/oops/accessBackend.hpp:733
#12 AccessInternal::PreRuntimeDispatch::load_at<544848ul, long> (offset=40, base=0x0) at ./src/hotspot/share/oops/accessBackend.hpp:766
#13 AccessInternal::PreRuntimeDispatch::load_at<540752ul, long> (offset=40, base=0x0) at ./src/hotspot/share/oops/accessBackend.hpp:775
#14 AccessInternal::load_at<524288ul, long> (offset=40, base=0x0) at ./src/hotspot/share/oops/accessBackend.hpp:1189
#15 AccessInternal::LoadAtProxy<524288ul>::operator long_int<long int> (this=<optimized out>) at ./src/hotspot/share/oops/accessBackend.hpp:1313
#16 oopDesc::long_field (offset=40, this=0x0) at ./src/hotspot/share/oops/oop.inline.hpp:311
#17 java_lang_Thread::thread_id (java_thread=0x0) at ./src/hotspot/share/classfile/javaClasses.cpp:1772
#18 0x00007fccdc427c25 in JfrCheckpointThreadClosure::do_thread (this=0x7fc229bfe680r t=0x7f9bd84eb800) at ./src/hotspot/share/jfr/recorder/checkpoint/types/片.cpp:105
#19 0x00007fccdc9b502d in Threads::java_threads_do (tc=0x7fc229bfe680) at ./src/hotspot/share/runtime/thread.cpp:3864
#20 Threads::threads_do (tc=tc@entry=0x7fc229bfe680) at ./src/hotspot/share/runtime/thread.cpp:3877
#21 0x00007fccdc42786c in JfrThreadConstantSet::serialize (this=<optimized out>, writer=...) at ./src/hotspot/share/jfr/recorder/checkpoint/types/jfrType.cpp:119
#22 0x00007fccdc42ad8e in JfrSerializerRegistration::invoke (this=0x7fc21d69a240, writer=...) at ./src/hotspot/share/jfr/recorder/checkpoint/types/jfrTypeManager.cpp:90
#23 0x00007fccdc42b0de in JfrTypeManager::write_safepoint_types (writer=...) at ./src/hotspot/share/jfr/recorder/checkpoint/types/jfrTypeManager.cpp:148
#24 0x00007fccdc3e06dc in JfrCheckpointManager:write_safepoint_types (this=<optimized out>) at ./src/hotspot/share/jfr/recorder/checkpoint/jfrCheckpointManager.cpp:356
#25 0x00007fccdc40e91f in JfrRecorderService::safepoint_write (this=0x7f9d731fac40) at ./src/hotspot/share/jfr/recorder/service/jfrRecorderService.cpp:4 61
#26 0x00007fccdca2c040 in VM_Operation::evaluate (this=this@entry=0x7f9d731fab70) at ./src/hotspot/share/runtime/vmOperations.cpp:67
#27 0x00007fccdca32990 in VMThread::evaluate_operation (this=this@entry=0x7fccdb6c8680z op=0x7f9d731fab70) at ./src/hotspot/share/runtime/vmThread.cpp:413
#28 0x00007fccdca32dfe in VMThread::loop (this=this@entry=0x7fccdb6c8680) at ./src/hotspot/share/runtime/vmThread.cpp:548
#29 0x00007fccdca3335d in VMThread::run (this=0x7fccdb6c8680) at ./src/hotspot/share/runtime/vmThread.cpp:310
#30 0x00007fccdc9b7c5b in Thread::call_run (this=this@entry=0x7fccdb6c8680) at./src/hotspot/share/runtime/thread.cpp:385
#31 0x00007fccdc771df8 in thread_native_entry (thread=0x7fccdb6c8680) at ./src/hotspot/os/linux/os_linux.cpp:837
#32 0x00007fccddd283f9 in start_thread () from /lib64/libpthread.so.0
#33 0x00007fccdda3d303 in clone () from/lib64/libc.so.6
-----
Stack: 0x000075760880000000007E57609800001 sp=0x00007576097e750, freespace=1017k
Native frames: (J=compiled Java code j=interpreted VV-VM code C=native code)
V [libjvm.so+0x69c36f] java_lang_Thread::thread_id(oopDesc* )+0xf
V [libjvm.so+0x6e6f15] JfrCheckpointThreadClosure::do_thread(Thread* )+0x2f5
V [1ibjvm.so+0xaa095c] Threads::threads_do(Threadclosure*)+0x2c
V [libjvm.so+0x6e6b67] JfrThreadConstantSet::serialize(JfrCheckpointwriter& )+0x87
V [libjvm.so+0x6ea6d2] JfrTypeManager::writes_afepoint_types(JfrCheckpointwriter& )+0x92
V [libjvm.so+0x6a70ba] JfrCheckpointManager::write_safepoint_types()+0x3a
V [libjvm.so+0x6d01be] JfrRecorderService::safepoint_write()+0x39e
V [libjvm.so+0xb06097] VM Operation::evaluate()+0x47
V [libjvm.so+0xb0402d] VMThread:evaluate_operation(VM_Operation* )+0xfd
V [libjvm.so+0xb04479] VMThread::loop()+0x219
V [libjvm.so+0xb04926] VMThread::run()+0x86
V [libjvm.so+0x9375b2] java_start(Thread*)+0xf2
More details from gdb:
-----
#0 0x00007fccdd97a605 in raise () from /lib64/libc.so.6
#1 0x00007fccdd9638a2 in abort () from /lib64/libc.so.6
#2 0x00007fccdc769975 in os::abort (dump_core=<optimized out>, siginfo=<optimized out>, context=<optimized out>) at ./src/hotspot/os/linux/os_linux.cpp:1565
#3 0x00007fccdca29919 in VMError::report_and_die (id=<optimized out>, message=message@entry=0x0, detail_fmt=detail_fmt@entry=0x7fccdcb03990 "%s", detail_args=detail_args@entry=0x7fc229bfd668, thread=thread@entry=0x7fccdb6c8680, pc=pc@entry 0x7fccdc3d282f <java_lang_Thread::thread_id(oopDesc*)+15> "H\213\004\a]\303\017\037", siginfo=siginfo@entry=0x7fc229bfda30, context=context@entry=0x7fc229bfd900, filename=filename@entry=0x0, lineno=lineno@entry=0, size=size@entry=0) at ./src/hotspot/share/utilities/vmError.cpp:1609
#4 0x00007fccdca2a331 in VMError::report_and die (thread=thread@entry=0x7fccdb6c8680, sig=sig@entry=11, pc=pc@entry=0x7fccdc3d282f <java_lang_Thread: :thread_id(oopDesc*)+15> "H\213\004\a]\303\017\037", siginfo=siginfo@entry=0x7fc229bfda30)
#5 0x00007fccdca2a361 in VMError::report_and_die (thread=thread@entry=0x7fccdb6c8680, sig=sig@entry=11, pc=pc@entry=0x7fccdc3d282f <java_lang_Thread::thread_id(oopDesc*)+15> "H\213\004\a]\303\017\037", siginfo=siginfo@entry=0x7fc229bfda30, context=context@entry=0x7fc229bfd900)at ./src/hotspot/share/utilities/vmError.cpp:1276
#6 0x00007fccdc774c19 in JVM_handle_linux_signal (sig=11, info=0x7fc229bfda30, ucVoid=0x7fc229bfd900, abort_if_unrecognized=<optimized out>) at ./src/hotspot/os_cpu/linux_x86/os_linux_x86.cpp:626
#7 0x00007fccdc767478 in signalHandler (sig=11, info=0x7fc229bfda30, uc=0x7fc229bfd900)at./src/hotspot/os/linux/os_linux.cpp:4866
#8 <signal handler called>
#9 RawAccessBarrier<64ul>::load_internal<64ul, long> (addr=0x28) at ./src/hotspot/share/oops/accessBackend.hpp:260
#10 RawAccessBarrier<64ul>: :load<long> (addr=0x28)at ./src/hotspot/share/oops/accessBackend.hpp:343
#11 AccessInternal::PreRuntimeDispatch::load<544848ul, long> (addr=0x28) at ./src/hotspot/share/oops/accessBackend.hpp:733
#12 AccessInternal::PreRuntimeDispatch::load_at<544848ul, long> (offset=40, base=0x0) at ./src/hotspot/share/oops/accessBackend.hpp:766
#13 AccessInternal::PreRuntimeDispatch::load_at<540752ul, long> (offset=40, base=0x0) at ./src/hotspot/share/oops/accessBackend.hpp:775
#14 AccessInternal::load_at<524288ul, long> (offset=40, base=0x0) at ./src/hotspot/share/oops/accessBackend.hpp:1189
#15 AccessInternal::LoadAtProxy<524288ul>::operator long_int<long int> (this=<optimized out>) at ./src/hotspot/share/oops/accessBackend.hpp:1313
#16 oopDesc::long_field (offset=40, this=0x0) at ./src/hotspot/share/oops/oop.inline.hpp:311
#17 java_lang_Thread::thread_id (java_thread=0x0) at ./src/hotspot/share/classfile/javaClasses.cpp:1772
#18 0x00007fccdc427c25 in JfrCheckpointThreadClosure::do_thread (this=0x7fc229bfe680r t=0x7f9bd84eb800) at ./src/hotspot/share/jfr/recorder/checkpoint/types/片.cpp:105
#19 0x00007fccdc9b502d in Threads::java_threads_do (tc=0x7fc229bfe680) at ./src/hotspot/share/runtime/thread.cpp:3864
#20 Threads::threads_do (tc=tc@entry=0x7fc229bfe680) at ./src/hotspot/share/runtime/thread.cpp:3877
#21 0x00007fccdc42786c in JfrThreadConstantSet::serialize (this=<optimized out>, writer=...) at ./src/hotspot/share/jfr/recorder/checkpoint/types/jfrType.cpp:119
#22 0x00007fccdc42ad8e in JfrSerializerRegistration::invoke (this=0x7fc21d69a240, writer=...) at ./src/hotspot/share/jfr/recorder/checkpoint/types/jfrTypeManager.cpp:90
#23 0x00007fccdc42b0de in JfrTypeManager::write_safepoint_types (writer=...) at ./src/hotspot/share/jfr/recorder/checkpoint/types/jfrTypeManager.cpp:148
#24 0x00007fccdc3e06dc in JfrCheckpointManager:write_safepoint_types (this=<optimized out>) at ./src/hotspot/share/jfr/recorder/checkpoint/jfrCheckpointManager.cpp:356
#25 0x00007fccdc40e91f in JfrRecorderService::safepoint_write (this=0x7f9d731fac40) at ./src/hotspot/share/jfr/recorder/service/jfrRecorderService.cpp:4 61
#26 0x00007fccdca2c040 in VM_Operation::evaluate (this=this@entry=0x7f9d731fab70) at ./src/hotspot/share/runtime/vmOperations.cpp:67
#27 0x00007fccdca32990 in VMThread::evaluate_operation (this=this@entry=0x7fccdb6c8680z op=0x7f9d731fab70) at ./src/hotspot/share/runtime/vmThread.cpp:413
#28 0x00007fccdca32dfe in VMThread::loop (this=this@entry=0x7fccdb6c8680) at ./src/hotspot/share/runtime/vmThread.cpp:548
#29 0x00007fccdca3335d in VMThread::run (this=0x7fccdb6c8680) at ./src/hotspot/share/runtime/vmThread.cpp:310
#30 0x00007fccdc9b7c5b in Thread::call_run (this=this@entry=0x7fccdb6c8680) at./src/hotspot/share/runtime/thread.cpp:385
#31 0x00007fccdc771df8 in thread_native_entry (thread=0x7fccdb6c8680) at ./src/hotspot/os/linux/os_linux.cpp:837
#32 0x00007fccddd283f9 in start_thread () from /lib64/libpthread.so.0
#33 0x00007fccdda3d303 in clone () from/lib64/libc.so.6
- links to
-
Commit
openjdk/jdk11u-dev/29f300eb
-
Review
openjdk/jdk11u-dev/2413
-
Review(master)
openjdk/jdk8u-dev/486