8322511: [11u] JfrCheckpointThreadClosure::do_thread crashes when fetching thread_id

Reviewed-by: phh